# RobotCommander

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RobotCommander.qrc  RobotCommanderConfig.h.in  compositor.cpp  compositor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maplabel.cpp  maplabel.h  mapwidget.cpp  mapwidget.h  protocol.h  release.json  robot.cpp  robot.h  routines.sh  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  updater.cpp  updater.h  version.rc
command/: abstractcommand.h  anycommand.cpp  anycommand.h  command.cpp  command.h  pid1command.cpp  pid1command.h  pid2command.cpp  pid2command.h  positioncommand.cpp  positioncommand.h  setgpscommand.cpp  setgpscommand.h
data/: datadisplayer.cpp  datadisplayer.h  hexdisplayer.cpp  hexdisplayer.h  pid.cpp  pid.h  position.cpp  position.h  version.h
icon/: icon.icns
info/: anyinfo.cpp  anyinfo.h  info.cpp  info.h  positioninfo.cpp  positioninfo.h
panel/: commandpanel.cpp  commandpanel.h  commandpanel.ui  consolepanel.cpp  consolepanel.h  consolepanel.ui  panelbase.h  senderpanel.cpp  senderpanel.h  senderpanel.ui
translation/: RobotCommander_en.ts  RobotCommander_zh.ts
util/: autorefreshcombobox.cpp  autorefreshcombobox.h
virtualrobot/: CMakeLists.txt  VirtualRobot.qrc  main.cpp  util.h  vrmainwindow.cpp  vrmainwindow.h  vrmainwindow.ui
